tests/baselines/reference/generics5.errors.txt
tests/cases/compiler/generics5.ts(10,14): error TS2344: Type 'A' does not satisfy the constraint 'B'.
  Index signature is missing in type 'B'.


==== tests/cases/compiler/generics5.ts (1 errors) ====
    interface A { a: string; }
    interface B extends A { b: string; }
    
    interface C extends B { c: string; }
    interface G<T, U extends B> {
    
    
    }
    
    var v3: G<A, A>;               // Error, A not valid argument for U
                 ~
!!! error TS2344: Type 'A' does not satisfy the constraint 'B'.
!!! error TS2344:   Index signature is missing in type 'B'.
    
    